Add watch and coverage

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
+    "test:watch": "jest --watchAll",
+    "test:coverage": "jest --coverage",
     "release": "standard-version"
   },
   "jest": {
