--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@svenardo/capability-url",
   "private": false,
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Structure for generation of secure capability URLs",
   "author": "Sven Anders Robbestad <robbestad@gmail.com>",
   "main": "index.js",
@@ -22,6 +22,8 @@
     ]
   },
   "devDependencies": {
+    "babel-env": "^2.4.1",
+    "babel-jest": "^23.6.0",
     "jest": "^23.6.0",
     "standard-version": "^4.4.0"
   }
