--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "sh .build.sh",
-    "deploy": "sh deploy.sh",
+    "deploy": "sh .deploy.sh",
     "release": "npm run build && npm run deploy"
   },
   "keywords": [],
