--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -16,7 +16,7 @@ http {
   lua_ssl_trusted_certificate /etc/ssl/certs/ca-certificates.crt;
 
   server {
-    listen 80;
+    listen 8081;
 
    location / {
 	 return 200 'Hello';
@@ -30,7 +30,7 @@ http {
        access_by_lua_block {
           local hmac = require "resty.hmac"
           local hm, err = hmac:new("big-secret")
-          local ok, err = hm:check_signature("sha256", ngx.var.header .. ngx.var.message, nil, ngx.var.signature)
+          local ok, err = hm:check_signature("sha256", ngx.var.header .. "." .. ngx.var.message, nil, ngx.var.signature)
           ngx.say(ok)
        }
    }
