--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-jest": "^23.6.0",
     "jest": "^23.6.0",
     "rollup": "^0.66.0",
+    "rollup-plugin-babel-minify": "^6.0.0",
     "standard-version": "^4.4.0"
   }
 }
