--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,6 +3,7 @@ FROM svena/nginx-openresty
 COPY nginx.conf /nginx.conf
 RUN mkdir /lua
 COPY json.lua /lua/json.lua
+COPY base64urlunescape.lua /lua/base64urlunescape.lua
 
 # Cleanup
 RUN rm -rf /var/cache/apk/*
