--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -23,14 +23,17 @@ http {
    }
 
    location ~ /verify {
-       if ($request ~ \?token=([0-9a-zA-Z+=\-/]+)) { set $header $1; }
-       if ($request ~ \?token=[0-9a-zA-Z+=\-/]+.([0-9a-zA-Z+=\-/]+)) { set $message $1; }
-       if ($request ~ \?token=[0-9a-zA-Z+=\-/]+.[0-9a-zA-Z+=\-/]+.([0-9a-zA-Z+=\-/]+)) { set $signature $1; }
+       if ($request ~ \?token=([0-9a-zA-Z+_=\-/]+)) { set $header $1; }
+       if ($request ~ \?token=[0-9a-zA-Z+_=\-/]+.([0-9a-zA-Z+_=\-/]+)) { set $message $1; }
+       if ($request ~ \?token=[0-9a-zA-Z+_=\-/]+.[0-9a-zA-Z+_=\-/]+.([0-9a-zA-Z+_=\-/]+)) { set $signature $1; }
 
        access_by_lua_block {
+         local base64urlunescape = require 'base64urlunescape'
+
+          local signature = base64urlunescape(ngx.var.signature)
           local hmac = require "resty.hmac"
           local hm, err = hmac:new("big-secret")
-          local ok, err = hm:check_signature("sha256", ngx.var.header .. "." .. ngx.var.message, nil, ngx.var.signature)
+          local ok, err = hm:check_signature("sha256", ngx.var.header .. "." .. ngx.var.message, nil, signature)
           ngx.say(ok)
        }
    }
