--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@svenardo/openresty-jwt",
+  "name": "@svenardo/ujwt",
   "private": false,
-  "version": "0.2.9",
+  "version": "0.2.10",
   "description": "Open-resty compatible JWT token generation",
   "author": "Sven Anders Robbestad <robbestad@gmail.com>",
   "main": "bundle.js",
