--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@svenardo/ujwt",
   "private": false,
   "version": "0.2.10",
-  "description": "Open-resty compatible JWT token generation",
+  "description": "µJWT - a small JWT token lib",
   "author": "Sven Anders Robbestad <robbestad@gmail.com>",
   "main": "bundle.js",
   "scripts": {
